alpm-types/src/relation/snapshots/soname::invalid_sonamev2_parser@case_1.snap
---
source: alpm-types/src/relation/soname.rs
---
error: invalid shared library prefix delimiter
 | 
 | libexample.so.1
 |                ^ expected shared library prefix `:`
